Fix spacing for mobile devices

--- a/css/mhamilton723.webflow.css
+++ b/css/mhamilton723.webflow.css
@@ -92,7 +92,6 @@ p {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-image: -webkit-linear-gradient(168deg, rgba(0, 0, 0, .59), hsla(0, 0%, 100%, 0) 69%), url('../images/bg_opt_1.svg');
   background-image: linear-gradient(282deg, rgba(0, 0, 0, .59), hsla(0, 0%, 100%, 0) 69%), url('../images/bg_opt_1.svg');
   background-position: 0px 0px, 0px 0px;
   background-size: auto, cover;
@@ -450,7 +449,9 @@ p {
   flex-wrap: wrap;
   grid-column-gap: 16px;
   grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
 }
 
@@ -622,7 +623,9 @@ p {
   flex-wrap: wrap;
   grid-column-gap: 16px;
   grid-row-gap: 16px;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
   grid-template-rows: auto auto;
 }
 
@@ -661,6 +664,7 @@ p {
     text-align: left;
   }
   .grid {
+    display: -ms-grid;
     display: grid;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -669,7 +673,9 @@ p {
     flex-direction: column;
     grid-column-gap: 16px;
     grid-row-gap: 32px;
+    -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: auto auto;
     grid-template-rows: auto auto;
   }
   .video-head {
@@ -706,8 +712,7 @@ p {
 
 @media (max-width: 767px) {
   .particles {
-    height: 80vh;
-    background-image: -webkit-linear-gradient(168deg, rgba(0, 0, 0, .59), hsla(0, 0%, 100%, 0) 69%), url('../images/bg_opt_1.svg');
+    height: 90vh;
     background-image: linear-gradient(282deg, rgba(0, 0, 0, .59), hsla(0, 0%, 100%, 0) 69%), url('../images/bg_opt_1.svg');
     background-position: 0px 0px, 0px 0px;
     background-size: auto, cover;
@@ -728,8 +733,7 @@ p {
   }
   .hero-left {
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 0%;
     text-align: center;
   }
   .hero-right {
@@ -764,6 +768,8 @@ p {
     padding-bottom: 20px;
   }
   .hero-wrap-2 {
+    margin-right: 3%;
+    margin-left: 3%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -784,6 +790,9 @@ p {
   }
   .item-body {
     text-align: center;
+  }
+  .item-heading {
+    margin-top: 2%;
   }
   ._4-item-column {
     overflow: hidden;
@@ -857,6 +866,8 @@ p {
   ._3-item-column {
     overflow: hidden;
     width: auto;
+    margin-right: 3%;
+    margin-left: 3%;
     padding-bottom: 5%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -867,6 +878,7 @@ p {
   ._3colimg {
     width: 80vw;
     max-height: none;
+    max-width: 70vw;
   }
   .mathpad {
     height: auto;
@@ -874,13 +886,19 @@ p {
   .ai4eimg {
     width: 80vw;
     max-height: none;
+    max-width: 70vw;
+  }
+  .ai4eimg.defer {
+    max-width: 60vw;
   }
   ._4colimg {
     width: 70vw;
+    max-width: 50vw;
   }
   ._4colimg2 {
     width: 70vw;
     max-height: none;
+    max-width: 70vw;
   }
   .item-block-wrap {
     clear: none;
@@ -903,14 +921,25 @@ p {
 }
 
 @media (max-width: 479px) {
+  .particles {
+    height: 90vh;
+  }
   .hero-wrap {
     top: 5vh;
   }
   .img {
     max-width: 80vw;
   }
+  .subproject-heading {
+    font-size: 30px;
+    line-height: 35px;
+  }
   .right-2 {
     padding-top: 0px;
+  }
+  .item-heading {
+    font-size: 25px;
+    line-height: 30px;
   }
   ._4-item-column {
     margin-right: 2%;
@@ -942,58 +971,90 @@ p {
 }
 
 #w-node-2146fdce5d56-6f3c02e2 {
+  -ms-grid-column: 1;
   grid-column-start: 1;
+  -ms-grid-column-span: 1;
   grid-column-end: 2;
+  -ms-grid-row: 1;
   grid-row-start: 1;
+  -ms-grid-row-span: 1;
   grid-row-end: 2;
 }
 
 #w-node-8e3318834eb1-6f3c02e2 {
+  -ms-grid-column: 2;
   grid-column-start: 2;
+  -ms-grid-column-span: 1;
   grid-column-end: 3;
+  -ms-grid-row: 1;
   grid-row-start: 1;
+  -ms-grid-row-span: 1;
   grid-row-end: 2;
 }
 
 #w-node-84571bc4fe48-6f3c02e2 {
+  -ms-grid-column: 1;
   grid-column-start: 1;
+  -ms-grid-column-span: 1;
   grid-column-end: 2;
+  -ms-grid-row: 2;
   grid-row-start: 2;
+  -ms-grid-row-span: 1;
   grid-row-end: 3;
 }
 
 #w-node-a615fe708998-6f3c02e2 {
+  -ms-grid-column: 2;
   grid-column-start: 2;
+  -ms-grid-column-span: 1;
   grid-column-end: 3;
+  -ms-grid-row: 2;
   grid-row-start: 2;
+  -ms-grid-row-span: 1;
   grid-row-end: 3;
 }
 
 #w-node-5d93760240b3-6f3c02e2 {
+  -ms-grid-column: 2;
   grid-column-start: 2;
+  -ms-grid-column-span: 1;
   grid-column-end: 3;
+  -ms-grid-row: 1;
   grid-row-start: 1;
+  -ms-grid-row-span: 1;
   grid-row-end: 2;
 }
 
 #w-node-8fc689b6a2c1-6f3c02e2 {
+  -ms-grid-column: 1;
   grid-column-start: 1;
+  -ms-grid-column-span: 1;
   grid-column-end: 2;
+  -ms-grid-row: 1;
   grid-row-start: 1;
+  -ms-grid-row-span: 1;
   grid-row-end: 2;
 }
 
 #w-node-e5dcc1b7f333-6f3c02e2 {
+  -ms-grid-column: 2;
   grid-column-start: 2;
+  -ms-grid-column-span: 1;
   grid-column-end: 3;
+  -ms-grid-row: 2;
   grid-row-start: 2;
+  -ms-grid-row-span: 1;
   grid-row-end: 3;
 }
 
 #w-node-e76a6fd826b2-6f3c02e2 {
+  -ms-grid-column: 1;
   grid-column-start: 1;
+  -ms-grid-column-span: 1;
   grid-column-end: 2;
+  -ms-grid-row: 2;
   grid-row-start: 2;
+  -ms-grid-row-span: 1;
   grid-row-end: 3;
 }
 
